Add(avatar/action): Use the user role color.